# haskell-playground

./: .ghci  .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  app.cabal  release.nix  shell.nix  stack.yaml  test.cabal
docs/: 01-language-extensions.md  03-how-equality-constraint-works.md  04-homogenous-heterogenous-equality.md
mydocs/: ghc-flags.md  language-extensions.md
nix/nixpkgs/: default.nix  revision.json  update.sh
nix/pkgs/: overlay.nix
nix/pkgs/nix-gitignore/: default.nix  revision.json
src/: 02_NestedStateT-Invalid.hs  03_NestedStateT.hs  06_FunctorComposition.purs  08_ExtensibleEffects.hs  09_EqualityConstraint_MyTuple.hs  10_EqualityConstraint_Twice.hs  10_EqualityConstraint_Twice_class.hs  12_EqualityConstraint_Twice_class.hs  13_EqualityConstraint_Twice.purs  13_EqualityConstraint_Twice_class.purs  14_EqualityConstraint_Twice_class.idr  14_Refl.idr  15_Refl.idr  16_Refl.hs  1_NestedWriterT.hs  4_FunctorComposition.hs  5_FunctorComposition.idr  7_FunctorCompositionWithType.purs  ContPlay.hs  FunctorComposition.hs  Lib.hs  Main.hs  Mtl.hs  MyApp.hs  NestedStateT-Invalid.hs  NestedStateT.hs  NestedWriterT.hs  Playground.hs
test/: Spec.hs
