name:                haskell-test
version:             0.1.0.0

license:             Apache-2.0
license-file:        LICENSE
author:              srghma
maintainer:          srghma@gmail.com

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable haskell-test
  main-is:             NestedStateT.hs

  -- recommendations from https://github.com/commercialhaskell/rio#ghc-options

  -- -Wall -- Turns on all warning options that indicate potentially suspicious code
  -- -Wincomplete-record-updates -- like disallow non-total functions
  -- -Wincomplete-uni-patterns -- warns about places where a pattern-match might fail at runtime, only to lambda-expressions
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wincomplete-patterns
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Werror
                       -fprint-potential-instances

  other-extensions:    OverloadedStrings
                     , NoImplicitPrelude
                     , TemplateHaskell
                     , ScopedTypeVariables
                     , GeneralizedNewtypeDeriving

  default-extensions:   NoImplicitPrelude
                      , OverloadedStrings

  build-depends:       protolude
                     , mtl
                     , hspec
                     , hspec-core

  hs-source-dirs:      src

  default-language:    Haskell2010

