name:                haskell-test
version:             0.1.0.0

license:             Apache-2.0
license-file:        LICENSE
author:              srghma
maintainer:          srghma@gmail.com

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable haskell-test
  main-is:             9_InstanceResolution.hs

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wincomplete-patterns
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Werror
                       -fprint-potential-instances

  other-extensions:    OverloadedStrings
                     , NoImplicitPrelude
                     , TemplateHaskell
                     , ScopedTypeVariables
                     , GeneralizedNewtypeDeriving

  default-extensions:   NoImplicitPrelude
                      , OverloadedStrings

  build-depends:       protolude
                     , base
                     , mtl
                     , hspec
                     , hspec-core
                     , extensible-effects
                     , free
                     , random

  hs-source-dirs:      src

  default-language:    Haskell2010
