name:                test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/test#readme
license:             BSD3
license-file:        LICENSE
author:              BjornMelgaard
maintainer:          some@email.com
copyright:           2017 BjornMelgaard
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , aeson
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, TemplateHaskell

test-suite test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test
                     , protolude >= 0.1.6 && < 0.2
                     , hspec
                     , QuickCheck
                     , aeson
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/githubuser/test
